# OpenGL_learning

./: CMakeLists.txt
src/: main.cpp
src/lesson2/: main.cpp
src/lesson2/res/shaders/: triangle.vert
src/lesson3/: main.cpp
src/lesson3/res/shaders/: triangle.frag
src/lesson4/: main.cpp
src/lesson4/res/shaders/: triangle.frag  triangle.vert
src/lesson5/: main.cpp
src/lesson5/res/shaders/: triangle.frag  triangle.vert
src/utils/: shader_utils.cpp  shader_utils.h  texture.cpp  texture.h
